
// protoc.exe --csharp_out . ./helloworld.proto --grpc_out . --plugin=protoc-gen-grpc=C:\Users\pc\.nuget\packages\grpc.tools\1.11.0\tools\windows_x64\grpc_csharp_plugin.exe
// 

syntax = "proto3";

package gRPCDemo;

service gRPC {
	rpc SayHello (HelloRequest) returns (HelloReply) {}
	rpc Test (stream HelloRequest) returns (HelloReply) {}
	rpc Test2 (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}

message InculdeObj {
	HelloReply replay = 1;
	HelloRequest reqeust = 2;
}